--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="container mx-auto px-6 py-20 md:py-32 text-center">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">活齿减速器</h1>
                 <p class="text-lg md:text-2xl text-slate-600">以全新结构，定义下一代机器人与机床核心动力</p>
-                <img src="bkg.png" alt="活齿减速器图片" class="mx-auto mt-8 w-full max-w-sm md:max-w-md lg:max-w-lg">
+                <img src="bkg.png" alt="活齿减速器图片" class="mx-auto mt-8 max-w-full">
             </div>
         </section>
 
