--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
         </section>
 
-                <section id="application" class="bg-white py-16 md:py-24">
+        <section id="application" class="bg-white py-16 md:py-24">
             <div class="container mx-auto px-6">
                 <div class="text-center">
                     <h2 class="text-3xl md:text-4xl font-bold mb-4">应用领域</h2>
@@ -184,11 +184,11 @@
                         <div class="space-y-6">
                             <div class="bg-slate-50 p-6 rounded-lg h-80">
                                 <h4 class="font-bold text-lg mb-2">活齿机器人减速器</h4>
-                                <img src="h.jpg" alt="活齿减速器" class="mx-auto mt-8 w-48">
+                                <img src="h.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                             </div>
                              <div class="bg-slate-50 p-6 rounded-lg h-80">
                                 <h4 class="font-bold text-lg mb-2">活齿减速器转台</h4>
-                                <img src="5.png" alt="活齿减速器" class="mx-auto mt-8 max-w-xs">
+                                <img src="5.png" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                             </div>
                         </div>
                     </div>
@@ -198,17 +198,17 @@
                             <!-- 第一个卡片单独一行 -->
                              <div class="bg-slate-50 p-6 rounded-lg h-80">
                                 <h4 class="font-bold text-lg mb-2">工业机器人人形机器人/四足机械狗</h4>
-                                <img src="y1.jpg" alt="活齿减速器" class="mx-auto mt-8 max-w-md">
+                                <img src="y1.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                             </div>
                             <!-- 第二个和第三个卡片并排 -->
                              <div class="flex gap-6 items-stretch">
                                  <div class="bg-slate-50 p-6 rounded-lg flex-1">
                                     <h4 class="font-bold text-lg mb-2">四轴/五轴机床</h4>
-                                    <img src="y2.jpg" alt="活齿减速器" class="mx-auto mt-8 max-w-md">
+                                    <img src="y2.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                                  </div>
                                   <div class="bg-slate-50 p-6 rounded-lg flex-1">
                                     <h4 class="font-bold text-lg mb-2">新能源汽车/航空航天制造……</h4>
-                                    <img src="y3.jpg" alt="活齿减速器" class="mx-auto mt-8 max-w-md">
+                                    <img src="y3.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                                 </div>
                             </div>
                         </div>
@@ -238,30 +238,8 @@
                     <div class="value highlight">17项</div>
                     <div class="label">相关专利+产权</div>
                 </div>
-</div>
-
-
+            </div>
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        
 
         <section id="roadmap" class="py-16 md:py-24">
             <div class="container mx-auto px-6">
