--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
                         <div class="space-y-6">
                             <!-- 第一个卡片单独一行 -->
                              <div class="bg-slate-50 p-6 rounded-lg h-80">
-                                <h4 class="font-bold text-lg mb-2">工业机器人人形机器人/四足机械狗</h4>
-                                <img src="y1.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
+                                <h4 class="font-bold text-lg mb-2">工业机器人/人形机器人/四足机械狗</h4>
+                                <img src="y1.png" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                             </div>
                             <!-- 第二个和第三个卡片并排 -->
                              <div class="flex gap-6 items-stretch">
                                  <div class="bg-slate-50 p-6 rounded-lg flex-1">
                                     <h4 class="font-bold text-lg mb-2">四轴/五轴机床</h4>
-                                    <img src="y2.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
+                                    <img src="y2.png" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                                  </div>
                                   <div class="bg-slate-50 p-6 rounded-lg flex-1">
                                     <h4 class="font-bold text-lg mb-2">新能源汽车/航空航天制造……</h4>
-                                    <img src="y3.jpg" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
+                                    <img src="y3.png" alt="活齿减速器" class="mx-auto mt-8 w-full max-w-md max-h-48 object-contain">
                                 </div>
                             </div>
                         </div>
@@ -319,15 +319,15 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const chartData = {
-                lengshi: [9.4, 9.0, 9.5, 9.2, 8.0],
-                rv: [8.2, 6.0, 7.5, 6.5, 5.0],
-                harmonic: [7.5, 7.0, 5.0, 7.0, 6.0]
+                lengshi: [9.4, 8.0, 9.6, 9.2, 7.5],
+                rv: [8.2, 7.0, 8.0, 8, 5.0],
+                harmonic: [6.8, 8.7, 5.0, 7.0, 8.5]
             };
-            const labels = ['传动效率', '工作寿命', '扭转刚度', '精度保持', '成本效益'];
+            const labels = ['传动效率', '工作寿命', '扭转刚度', '精度保持', '制造成本'];
             const comparisonText = {
                 rv: {
                     title: '对比 RV 减速器',
-                    text: '与主流RV减速器相比，我们的滚动活齿减速器在<strong>传动效率</strong>、<strong>工作寿命</strong>和<strong>精度保持性</strong>上优势明显，<strong>扭转刚度</strong>更是高出20%以上。同时，我们的成本效益也极具竞争力，为客户提供更高性价比的选择。'
+                    text: '与主流RV减速器相比，我们的滚动活齿减速器在<strong>传动效率</strong>、<strong>工作寿命</strong>和<strong>精度保持性</strong>上优势明显，<strong>扭转刚度</strong>更是高出20%以上。同时，我们的制造成本也极具竞争力，为客户提供更高性价比的选择。'
                 },
                 harmonic: {
                     title: '对比谐波减速器',
