--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                     <p class="text-xl text-slate-700 mb-2">2025年融资计划</p>
                     <p class="text-5xl font-bold text-sky-600 mb-4">3000万</p>
                     <p class="text-slate-600">用于建设年产3万台的活齿减速器生产线</p>
+                    <p class="text-3xl font-bold text-sky-600 mt-8 mb-2">联系我们</p>
                     <img src="vx.jpeg" alt="滚动活齿减速器图片" class="mx-auto mt-6 max-w-xs rounded-lg">
                 </div>
                  <h2 class="mt-12 text-3xl md:text-4xl font-bold mb-4 text-sky-700">新原理 新结构 高精度 长寿命</h2>
